Update requirements for parsing

--- a/manifest.json
+++ b/manifest.json
@@ -21,6 +21,6 @@
 		"128": "/images/logo_128x.png"
 	},
   "permissions": [
-    "storage", "activeTab", "scripting"
+    "activeTab", "scripting"
   ]
 }
